--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "com.android.support:exifinterface:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:support-v4:${rootProject.ext.androidSupportVersion}"
-    implementation "com.android.support:support-media-compat:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:customtabs:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:appcompat-v7:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support.constraint:constraint-layout:${rootProject.ext.androidSupportConstraintVersion}"
@@ -73,13 +73,12 @@ dependencies {
     implementation "com.jakewharton.timber:timber:${rootProject.ext.timberVersion}"
 
     implementation "com.jakewharton:butterknife:${rootProject.ext.butterKnifeVersion}"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.ext.butterKnifeVersion}"
 
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okHttpVersion}"
-    implementation "com.squareup.okhttp3:okhttp:${rootProject.ext.okHttpVersion}"
 
     implementation "com.google.android.exoplayer:exoplayer-core:${rootProject.ext.exoPlayerVersion}"
     implementation "com.google.android.exoplayer:exoplayer-ui:${rootProject.ext.exoPlayerVersion}"
@@ -88,6 +87,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
     annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
     implementation "com.github.bumptech.glide:okhttp3-integration:${rootProject.ext.glideOkHttpIntegretionVersion}"
+
+    implementation "com.squareup.picasso:picasso:${rootProject.ext.picassoVersion}"
 
     implementation "com.mikepenz:iconics-core:${rootProject.ext.mikepenzIconicsVersion}"
     implementation "com.mikepenz:material-design-iconic-typeface:${rootProject.ext.mikepenzMaterialDesignIconicsVersion}"
@@ -112,6 +113,5 @@ dependencies {
 
     androidTestImplementation "com.android.support.test:rules:${rootProject.ext.testRulesVersion}"
     androidTestImplementation "com.android.support.test:runner:${rootProject.ext.testRulesVersion}"
-
 
 }
