--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             <meta-data
                 android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
-            <intent-filter android:autoVerify="true"
+            <intent-filter
+                android:autoVerify="true"
                 tools:targetApi="m">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -39,9 +40,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="http"
                     android:host="rcapstone.pelleritoudacity.info"
-                    android:path="/searchable" />
+                    android:path="/searchable"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
         <activity
@@ -52,7 +53,9 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.BaseActivity" />
+        <activity
+            android:name=".ui.activity.BaseActivity"
+            android:label="@string/title_activity_base" />
         <activity
             android:name=".ui.activity.SettingsActivity"
             android:excludeFromRecents="true"
@@ -66,7 +69,7 @@
         <activity
             android:name=".ui.activity.ManageActivity"
             android:excludeFromRecents="true"
-            android:label="@string/title_activity_subreddit"
+            android:label="@string/title_activity_manage"
             android:noHistory="true"
             android:parentActivityName=".ui.activity.MainActivity"
             android:theme="@style/AppThemeLight.NoActionBar">
@@ -84,13 +87,15 @@
             android:theme="@style/AppThemeLight.NoActionBar" />
         <activity
             android:name=".ui.activity.YoutubeActivity"
-            android:label="@string/title_activity_subreddit"
+            android:label="@string/title_activity_youtube"
             android:parentActivityName=".ui.activity.MainActivity"
             android:theme="@style/AppThemeLight">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activity.MainActivity" />
         </activity>
+
+        <activity android:name=".ui.activity.FullScreenActivity" />
 
         <activity
             android:name=".ui.activity.OptionWidgetActivity"
@@ -104,21 +109,6 @@
             android:exported="false"
             tools:ignore="ManifestResource" />
 
-        <service
-            android:name=".service.FirebaseRefreshTokenService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
-            </intent-filter>
-        </service>
-
-        <activity android:name=".ui.activity.FullScreenActivity" />
-
-        <service
-            android:name=".service.RemoteWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS" />
-        <service android:name=".service.WidgetService" />
-
         <receiver android:name=".widget.WidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -128,6 +118,22 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
+
+
+        <service
+            android:name=".service.FirebaseRefreshTokenService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
+            </intent-filter>
+        </service>
+
+
+        <service
+            android:name=".service.RemoteWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <service android:name=".service.WidgetService" />
+
 
     </application>
 
