--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeLight.NoActionBar">
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/title_activity_subreddit"
@@ -46,6 +47,7 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.activity.DetailActivity"
             android:label="@string/title_activity_subreddit_detail"
@@ -54,9 +56,7 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.activity.BaseActivity"
-            android:label="@string/title_activity_base" />
+
         <activity
             android:name=".ui.activity.SettingsActivity"
             android:excludeFromRecents="true"
@@ -67,13 +67,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activity.MainActivity" />
         </activity>
+
         <activity
             android:name=".ui.activity.ManageActivity"
             android:excludeFromRecents="true"
             android:label="@string/title_activity_manage"
             android:noHistory="true"
             android:parentActivityName=".ui.activity.MainActivity"
-            android:theme="@style/AppThemeLight.NoActionBar">
+            android:theme="@style/AppThemeLight">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.activity.MainActivity" />
@@ -85,7 +86,7 @@
             android:launchMode="singleTop"
             android:noHistory="true"
             android:parentActivityName=".ui.activity.MainActivity"
-            android:theme="@style/AppThemeLight.NoActionBar" />
+            android:theme="@style/AppThemeLight"/>
         <activity
             android:name=".ui.activity.YoutubeActivity"
             android:label="@string/title_activity_youtube"
