--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,113 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="info.pelleritoudacity.android.rcapstone">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <supports-screens android:xlargeScreens="true" />
 
     <application
         android:allowBackup="false"
-        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppThemeLight.NoActionBar">
-
+        android:supportsRtl="true">
         <activity android:name=".ui.activity.MainActivity" />
-
-        <activity
-            android:name=".ui.activity.DetailActivity"
-            android:label="@string/title_activity_subreddit_detail"
-            android:theme="@style/AppThemeLight.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".ui.activity.SettingsActivity"
-            android:excludeFromRecents="true"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".ui.activity.MainActivity"
-            android:theme="@style/AppThemeLight">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.activity.MainActivity" />
-        </activity>
-
-        <activity
-            android:name=".ui.activity.ManageActivity"
-            android:excludeFromRecents="true"
-            android:label="@string/title_activity_manage"
-            android:noHistory="true"
-            android:parentActivityName=".ui.activity.MainActivity"
-            android:theme="@style/AppThemeLight">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.activity.MainActivity" />
-        </activity>
-        <activity
-            android:name=".ui.activity.LoginActivity"
-            android:excludeFromRecents="true"
-            android:label="@string/title_activity_login"
-            android:launchMode="singleTop"
-            android:noHistory="true"
-            android:parentActivityName=".ui.activity.MainActivity"
-            android:theme="@style/AppThemeLight"/>
-        <activity
-            android:name=".ui.activity.YoutubeActivity"
-            android:label="@string/title_activity_youtube"
-            android:parentActivityName=".ui.activity.MainActivity"
-            android:theme="@style/AppThemeLight">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.activity.MainActivity" />
-        </activity>
+        <activity android:name=".ui.activity.DetailActivity" />
+        <activity android:name=".ui.activity.SettingsActivity" />
+        <activity android:name=".ui.activity.ManageActivity" />
+        <activity android:name=".ui.activity.LoginActivity" />
+        <activity android:name=".ui.activity.OptionWidgetActivity" />
+        <activity android:name=".ui.activity.YoutubeActivity" />
         <activity android:name=".ui.activity.FullScreenActivity" />
-        <activity
-            android:name=".ui.activity.OptionWidgetActivity"
-            android:noHistory="true"
-            android:theme="@style/Theme.AppCompat.Light.Dialog" />
-
-        <activity
-            android:name=".ui.activity.WebviewActivity"
-            android:label="@string/title_activity_webview"
-            android:theme="@style/AppThemeLight.NoActionBar"/>
-
-        <provider
-            android:name=".data.db.ContentProvider"
-            android:authorities="@string/content_authority"
-            android:exported="false"
-            tools:ignore="ManifestResource" />
-
-        <receiver android:name=".widget.WidgetProvider">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/widget_info" />
-        </receiver>
-
-        <service
-            android:name=".service.FirebaseRefreshTokenService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".service.RemoteWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS" />
-        <service android:name=".service.WidgetService" />
-
-
+        <activity android:name=".ui.activity.WebviewActivity" />
     </application>
 
 </manifest>
