--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion rootProject.sdkVersion
+    signingConfigs {
 
+        release_free {
+            keyAlias 'release_free'
+            keyPassword ''
+            storeFile file("$projectDir/keyStore/rcapstone_free_release.jks")
+            storePassword ''
+        }
+
+        release_paid {
+            keyAlias 'release_paid'
+            keyPassword ''
+            storeFile file("$projectDir/keyStore/rcapstone_paid_release.jks")
+            storePassword ''
+        }
+
+    }
+    compileSdkVersion rootProject.sdkVersion
     defaultConfig {
         applicationId "info.pelleritoudacity.android.rcapstone"
         minSdkVersion rootProject.minSdkVersion
@@ -32,19 +48,26 @@ android {
         it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '\""'
 
         it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '\""'
+
+
     }
     buildTypes {
+
         debug {
             applicationIdSuffix ".debug"
+
         }
+
         release {
+            productFlavors.free.signingConfig signingConfigs.release_free
+            productFlavors.paid.signingConfig signingConfigs.release_paid
+
             applicationIdSuffix ".release"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
         }
     }
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -52,68 +75,45 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:exifinterface:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:support-v4:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:customtabs:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:appcompat-v7:${rootProject.ext.androidSupportVersion}"
-    implementation "com.android.support.constraint:constraint-layout:${rootProject.ext.androidSupportConstraintVersion}"
-
     implementation "com.android.support:palette-v7:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:recyclerview-v7:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:cardview-v7:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:design:${rootProject.ext.androidSupportVersion}"
     implementation "com.android.support:preference-v7:${rootProject.ext.androidSupportVersion}"
-
-    implementation "com.android.support.constraint:constraint-layout:${rootProject.ext.androidSupportConstraintVersion}"
-
     implementation "commons-io:commons-io:${rootProject.ext.apacheCommonsVersion}"
-
     implementation "com.jakewharton.timber:timber:${rootProject.ext.timberVersion}"
-
     implementation "com.jakewharton:butterknife:${rootProject.ext.butterKnifeVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.ext.butterKnifeVersion}"
-
     implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
-    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-
     implementation "com.google.android.exoplayer:exoplayer-core:${rootProject.ext.exoPlayerVersion}"
     implementation "com.google.android.exoplayer:exoplayer-ui:${rootProject.ext.exoPlayerVersion}"
     implementation "com.google.android.exoplayer:extension-ima:${rootProject.ext.exoPlayerVersion}"
-
     implementation "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
     annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
     implementation "com.github.bumptech.glide:okhttp3-integration:${rootProject.ext.glideOkHttpIntegretionVersion}"
-
     implementation "com.squareup.picasso:picasso:${rootProject.ext.picassoVersion}"
-
     implementation "com.mikepenz:iconics-core:${rootProject.ext.mikepenzIconicsVersion}"
     implementation "com.mikepenz:material-design-iconic-typeface:${rootProject.ext.mikepenzMaterialDesignIconicsVersion}"
-
     implementation "com.firebase:firebase-jobdispatcher:${rootProject.ext.firebaseJobDispVersion}"
+
     implementation "com.google.firebase:firebase-core:${rootProject.ext.firebaseCoreVersion}"
     implementation "com.google.firebase:firebase-crash:${rootProject.ext.firebaseCrashVersion}"
-/*
-
-    freeImplementation "com.google.firebase:firebase-ads:${rootProject.ext.firebaseAdsVersion}"
-*/
+    implementation "com.google.android.gms:play-services-ads:${rootProject.ext.googleAdsVersion}"
 
     implementation "com.android.support.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
-
     testImplementation "junit:junit:${rootProject.ext.testJunitVersion}"
-
     androidTestImplementation "com.android.support:support-annotations:${rootProject.ext.androidSupportVersion}"
-
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:${rootProject.ext.espressoVersion}"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:${rootProject.ext.espressoVersion}"
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
-
     androidTestImplementation "com.android.support.test:rules:${rootProject.ext.testRulesVersion}"
     androidTestImplementation "com.android.support.test:runner:${rootProject.ext.testRulesVersion}"
-
 }
 
 apply plugin: 'com.google.gms.google-services'
