--- a/app/src/free/AndroidManifest.xml
+++ b/app/src/free/AndroidManifest.xml
@@ -104,7 +104,7 @@
 
         <provider
             android:name=".data.db.ContentProvider"
-            android:authorities="info.pelleritoudacity.android.rcapstone.free"
+            android:authorities="${applicationId}.provider"
             android:exported="false"
             tools:ignore="ManifestResource" />
 
