--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeLight.NoActionBar">
+        android:theme="@style/AppThemeLight.NoActionBar"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name=".ui.activity.MainActivity"
@@ -31,7 +32,6 @@
             <meta-data
                 android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
-
             <intent-filter
                 android:autoVerify="true"
                 tools:targetApi="m">
