--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,6 +3,6 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
-
+# project support gradle 4.10-all, for use it, change menu file -> settings -> compiler -> disable configure on demand
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.5-all.zip
 
