--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,35 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath "io.fabric.tools:gradle:${rootProject.ext.crashFabricToolsGradle}"
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     signingConfigs {
 
         release_free {
             keyAlias 'release_free'
-            keyPassword ''
+            keyPassword 'udacity'
             storeFile file("$projectDir/keyStore/rcapstone_free_release.jks")
-            storePassword ''
+            storePassword 'udacityrelease'
         }
 
         release_paid {
             keyAlias 'release_paid'
-            keyPassword ''
+            keyPassword 'udacityreleasepaid'
             storeFile file("$projectDir/keyStore/rcapstone_paid_release.jks")
-            storePassword ''
+            storePassword 'udacity'
         }
 
     }
@@ -42,12 +57,12 @@ android {
     }
     buildTypes.each {
         //  REDDIT BASE URL  - url: https://www.reddit.com/prefs/apps/
-        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '\""'
-        it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '\""'
-        it.buildConfigField 'String', 'REDDIT_ABOUT_URL', '\""'
-        it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '\""'
+        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '"gHRoCv5jZXeEBw"'
+        it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '"RCAPSTONE256"'
+        it.buildConfigField 'String', 'REDDIT_ABOUT_URL', '"http://rcapstone.android.pelleritoudacity.info"'
+        it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '"http://rcapstone.android.pelleritoudacity.info/my_redirect"'
 
-        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '\""'
+        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '"AIzaSyAe8psEXSy9Luv1Dqya-r8x-RGhwyPfJuA"'
 
 
     }
@@ -103,8 +118,7 @@ dependencies {
     implementation "com.firebase:firebase-jobdispatcher:${rootProject.ext.firebaseJobDispVersion}"
 
     implementation "com.google.firebase:firebase-core:${rootProject.ext.firebaseCoreVersion}"
-    implementation "com.google.firebase:firebase-crash:${rootProject.ext.firebaseCrashVersion}"
-    implementation "com.google.android.gms:play-services-ads:${rootProject.ext.googleAdsVersion}"
+    implementation "com.crashlytics.sdk.android:crashlytics:${rootProject.ext.crashAnalyticsVersion}"
 
     implementation "com.android.support.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
     testImplementation "junit:junit:${rootProject.ext.testJunitVersion}"
