--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,16 +20,16 @@ android {
 
         release_free {
             keyAlias 'release_free'
-            keyPassword 'udacity'
+            keyPassword 'XXX'
             storeFile file("$projectDir/keyStore/rcapstone_free_release.jks")
-            storePassword 'udacityrelease'
+            storePassword 'XXX'
         }
 
         release_paid {
             keyAlias 'release_paid'
-            keyPassword 'udacityreleasepaid'
+            keyPassword 'XXX'
             storeFile file("$projectDir/keyStore/rcapstone_paid_release.jks")
-            storePassword 'udacity'
+            storePassword 'XXX'
         }
 
     }
@@ -57,12 +57,12 @@ android {
     }
     buildTypes.each {
         //  REDDIT BASE URL  - url: https://www.reddit.com/prefs/apps/
-        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '"gHRoCv5jZXeEBw"'
-        it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '"RCAPSTONE256"'
-        it.buildConfigField 'String', 'REDDIT_ABOUT_URL', '"http://rcapstone.android.pelleritoudacity.info"'
-        it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '"http://rcapstone.android.pelleritoudacity.info/my_redirect"'
+        it.buildConfigField 'String', 'REDDIT_CLIENT_ID', '"XXX"'
+        it.buildConfigField 'String', 'REDDIT_SECRET_STATE', '"XXX"'
+        it.buildConfigField 'String', 'REDDIT_ABOUT_URL', '"XXX"'
+        it.buildConfigField 'String', 'REDDIT_REDIRECT_URL', '"XXX"'
 
-        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '"AIzaSyAe8psEXSy9Luv1Dqya-r8x-RGhwyPfJuA"'
+        it.buildConfigField 'String', 'YOUTUBE_DEVELOPER_KEY', '"XXX"'
 
 
     }
