--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,15 +115,11 @@ dependencies {
     implementation "com.squareup.picasso:picasso:${rootProject.ext.picassoVersion}"
     implementation "com.mikepenz:iconics-core:${rootProject.ext.mikepenzIconicsVersion}"
     implementation "com.mikepenz:material-design-iconic-typeface:${rootProject.ext.mikepenzMaterialDesignIconicsVersion}"
-
+    implementation "com.firebase:firebase-jobdispatcher:${rootProject.ext.firebaseJobDispVersion}"
 
     implementation "com.google.firebase:firebase-core:${rootProject.ext.firebaseCoreVersion}"
     implementation "com.crashlytics.sdk.android:crashlytics:${rootProject.ext.crashAnalyticsVersion}"
-
-    implementation "com.firebase:firebase-jobdispatcher:${rootProject.ext.firebaseJobDispVersion}"
-
-    // todo fix conflict to version 17.1.0
-    implementation 'com.google.firebase:firebase-ads:15.0.1'
+    implementation "com.google.android.gms:play-services-ads:${rootProject.ext.googleAdsVersion}"
 
     implementation "com.android.support.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
     testImplementation "junit:junit:${rootProject.ext.testJunitVersion}"
