--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:theme="@style/AppThemeLight.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/ads_app_id"/>
+
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/title_activity_subreddit"
