--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,11 @@ allprojects {
 
         firebaseJobDispVersion = "0.8.5"
         firebaseCoreVersion = "16.0.5"
+        googleAdsVersion = "17.1.1"
 
         crashFabricToolsGradle = "1.26.1"
         crashAnalyticsVersion = "2.9.6"
+
 
         mikepenzIconicsVersion = "3.1.0@aar"
         mikepenzMaterialDesignIconicsVersion = "2.2.0.5@aar"
