--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ allprojects {
         retrofitVersion = "2.4.0"
         okHttpVersion = "3.11.0"
 
+        roomVersion = "1.1.1"
+        archLifecycleVersion = "1.1.1"
+
         firebaseJobDispVersion = "0.8.5"
         firebaseCoreVersion = "16.0.5"
         googleAdsVersion = "17.1.1"
