--- a/app/src/free/AndroidManifest.xml
+++ b/app/src/free/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemeLight.NoActionBar"
+        tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:appComponentFactory">
 
         <activity
